--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
 version: '2'
 services:
   web:
-    build: .
+    image: "mingqianye/votable-api:latest"
     restart: always
-    container_name: nre
+    container_name: votable-api
     ports:
       - 8080:8080
+    depends_on:
+      - neo4j
     volumes:
       - /log:/app/log
-    environment:
-      - RAILS_ENV=production
-      - NEO4J_URL=${NEO4J_URL}
-      - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+  neo4j:
+    image: "neo4j:3.0.6-enterprise"
+    ports:
+      - 7474:7474
+      - 7687:7687
+    volumes:
+      - /data:/data
